<resources>
    <string name="app_name">MyCalculator</string>
    <string name="buttonAC">AC</string>
    <string name="button_percent">%</string>
    <string name="button_CE">CD</string>
    <string name="button_division">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiply">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_plus">+</string>
    <string name="button_1">1</string>
    <string name="button_minus">-</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>
    <string name="button_dot">,</string>
    <string name="button_equal">=</string>
    <string name="zero">0</string>
    <string name="options">Настройки</string>
    <string name="choose_theme">Выберите тему:</string>
    <string name="check_to_Light_theme">Светлая тема</string>
    <string name="check_to_dark_theme">Темная тема</string>
    <string name="digits">digits</string>
    <string name="default_theme">Тема по умолчанию</string>
    <string name="check_to_green_theme">Моя зеленая тема</string>
    <string name="buttonBack">назад</string>
</resources>