<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalcActivity">

    <TextView
        android:id="@+id/expression"
        style="@style/Screen_digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana"
        android:gravity="end"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@+id/digits"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="end"
        android:padding="10sp"
        style="@style/Screen_digits"
        app:layout_constraintBottom_toTopOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/expression"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digits">

        <Button
            android:id="@+id/btn_AC"
            style="@style/Buttons_red"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/buttonAC" />

        <Button
            android:id="@+id/btn_CD"
            style="@style/Buttons_red"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_CE" />

        <Button
            android:id="@+id/btn_percent"
            style="@style/Button_Operators"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_percent" />

        <Button
            android:id="@+id/btn_division"
            style="@style/Button_Operators"
            android:layout_gravity="center"
            android:text="@string/button_division" />

        <Button
            android:id="@+id/btn_7"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/btn_multiply"
            style="@style/Button_Operators"
            android:layout_gravity="center"
            android:text="@string/button_multiply" />

        <Button
            android:id="@+id/btn_4"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/btn_minus"
            style="@style/Button_Operators"
            android:layout_gravity="center"
            android:text="@string/button_minus" />

        <Button
            android:id="@+id/btn_1"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/btn_plus"
            style="@style/Button_Operators"
            android:layout_gravity="center"
            android:text="@string/button_plus" />

        <Button
            android:id="@+id/btn_0"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_0" />

        <Button
            android:id="@+id/btn_dot"
            style="@style/Button_Digit_Style"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/button_dot" />

        <Button
            android:id="@+id/btn_equal"
            style="@style/Button_equal"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/button_equal" />


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>