<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/options"
            android:textSize="@dimen/options_title_size_text"
            tools:ignore="MissingConstraints">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"

            android:text="@string/choose_theme"
            android:textSize="@dimen/ordinary_text"
            tools:ignore="MissingConstraints">
        </TextView>

        <RadioGroup
            android:id="@+id/rg_change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <RadioButton
                android:id="@+id/radioButton_for_default_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_radio_buttons"
                android:text="@string/default_theme"

                android:textSize="@dimen/ordinary_text">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButton_for_green_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_radio_buttons"
                android:text="@string/check_to_green_theme"
                android:textColor="@color/white"
                android:textSize="@dimen/ordinary_text"
                style="@style/Theme.MyGreenTheme"
                >
            </RadioButton>

            <RadioButton
                android:id="@+id/radioButton_for_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_radio_buttons"
                android:text="@string/check_to_dark_theme"
                android:textColor="@color/white"
                style="@style/Theme.MyDarkTheme"
                android:textSize="@dimen/ordinary_text"
                >

            </RadioButton>



        </RadioGroup>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>